@@ -1,8 +1,0 @@
-<?php
-
-namespace EventCalendar\Goog;
-
-class GoogApiException extends \RuntimeException
-{
-    
-}
