@@ -1,0 +1,8 @@
+<?php
+
+namespace EventCalendar\Google;
+
+class GoogleApiException extends \RuntimeException
+{
+    
+}
